tests/parser-test-files/bad-files/parse-cond.2.error
error: Malformed cond clause
  --> test:4:16
   |
 4 |  (define x (cond 1))
   |                  ^ expected list
